--- a/www/index.html
+++ b/www/index.html
@@ -6,19 +6,18 @@
   <link rel="stylesheet" href="https://use.typekit.net/hjv1pkn.css">
   <script src="vendor/mapbox-gl/mapbox-gl.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+  <link rel="stylesheet" href="sc-mapbox.css">
   <script src="frontend.web.js" type="text/javascript"></script>
   <script type="text/javascript">
-    const mapContainer = document.getElementById('map1');
+    const mapContainer = 'map1';
     const mapStyle = 'mapbox://styles/medialabkatowice/cje8gw06sc9yu2qpdrs9lprcm';
-    const mapboxAccessToken = '<mapbox token here>';
+    const mapboxAccessToken = '<token here>';
     const map = geographySurveyMap.create(mapContainer, mapStyle, mapboxAccessToken);
   </script>
   <body class="bg-white">
     <content>
       <div class="flex flex-wrap justify-center vh-50" style="">
-        <div class="" style="">
-          <div id="map1" class="w-100 h-100" style=""></div>
-        </div>
+        <div id="map1" class="w-100 h-100" style=""></div>
       </div>
     </content>
   </body>
